# pit

./: LICENSE  README.md  pyproject.toml
src/pit/: __main__.py  cli.py  commands.py  config.py  errors.py  executor.py
tests/commands/: test_hash_object.py  test_init.py
