[project]
name = "pit"
version = "0.1.0"
description = "A toy implementation of a subset of git."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
license = "MIT"

[project.scripts]
pit = "pit.__main__:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]
